blurred background image now covers correctly

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,7 +70,8 @@
 
 .blur{
     -webkit-filter: blur(7px);
-    size: cover;
+    background-size: cover !important;
+    background-repeat: no-repeat;
     position: fixed;
     height: 100%;
     width: 100%;
